[feat] 게시판기능, 디테일 페이지 제작 중

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,6 +11,10 @@
   width: percentage($size / $width);
 }
 
+@mixin px2vh($size, $width: 1920) {
+  width: percentage($size / $width);
+}
+
 @mixin px2padding($size, $width: 1920) {
   padding: 0px percentage($size / $width);
 }
