[feat] 회원가입 유효성 검사

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,7 +12,7 @@
 }
 
 @mixin px2vh($size, $width: 1920) {
-  width: percentage($size / $width);
+  height: percentage($size / $width);
 }
 
 @mixin px2padding($size, $width: 1920) {
