[feat] 로그인, 마이페이지, 메인페이지 수정

--- a/src/app/join/join.scss
+++ b/src/app/join/join.scss
@@ -27,7 +27,7 @@
     }
 
     .join_modal {
-        @include px2vw(625);
+        width: 625px;
         height: 262px;
         border: 1px solid black;
         box-shadow: 4px 4px 4px 2px #00000040;
