--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -1,10 +1,12 @@
+@import '../globals.scss';
 
 .login_wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 70vh ;
+    height: 70vh;
     flex-direction: column;
+
     h1 {
         margin-top: 169px;
         margin-bottom: 50px;
@@ -19,6 +21,11 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
+
+        >p {
+            font-size: 12px;
+            color: $main_color;
+        }
 
         label {
             font-size: 15px;
