--- a/src/component/Header/Header.scss
+++ b/src/component/Header/Header.scss
@@ -64,6 +64,7 @@
                 background: #FFFFFF;
                 box-shadow: 2px 2px 2px 2px #D9D9D9;
                 border-radius: 5px;
+                z-index: 10;
             }
         }
 
