--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -2,10 +2,10 @@
 
 
 .footer_container {
+    @include px2padding(320);
     height: 200px;
     border-top: 1px solid #000000;
     margin-top: 100px;
-    padding: $default_padding;
     display: flex;
     justify-content: space-between;
     align-items: center;
