--- a/src/app/profile/profile.scss
+++ b/src/app/profile/profile.scss
@@ -35,6 +35,7 @@
                 &:first-of-type {
                     width: 100%;
                     height: 100%;
+                    border-radius: 50%;
                 }
 
                 &:last-of-type {
