--- a/src/app/join/join.scss
+++ b/src/app/join/join.scss
@@ -23,6 +23,26 @@
         >p {
             font-size: 12px;
             color: #82B7F6;
+            margin-bottom: 10px;
+        }
+
+        >div {
+            position: relative;
+            padding: 0;
+
+            button {
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translate(-0%, -50%);
+                border: none;
+                width: 50px;
+                height: 20px;
+                background: #82B7F6;
+                border-radius: 5px;
+                color: #FFFFFF;
+                cursor: pointer;
+            }
         }
     }
 
