--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -25,6 +25,7 @@
         >p {
             font-size: 12px;
             color: $main_color;
+            margin-bottom: 5px;
         }
 
         label {
@@ -32,6 +33,22 @@
             font-weight: 400;
         }
 
+        >div {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            margin-top: 15px;
+
+            >p {
+                font-size: 15px;
+                font-weight: 500;
+                cursor: pointer;
+
+                &:first-of-type {
+                    margin-right: 16px;
+                }
+            }
+        }
 
     }
 
@@ -39,33 +56,21 @@
         width: 24%;
         display: flex;
         align-items: center;
-        justify-content: flex-end;
         margin-top: 15px;
+        justify-content: center;
 
-        &:last-of-type {
-            justify-content: center;
-
-            >img {
-                margin: 0px 6px;
-                transition: all .5s;
-                cursor: pointer;
-
-                &:hover {
-                    scale: 1.05;
-                    transition: all .5s;
-                }
-            }
-        }
-
-        >p {
-            font-size: 15px;
-            font-weight: 500;
+        >img {
+            margin: 0px 6px;
+            transition: all .5s;
             cursor: pointer;
 
-            &:first-of-type {
-                margin-right: 16px;
+            &:hover {
+                scale: 1.05;
+                transition: all .5s;
             }
         }
+
+
     }
 
 }
