--- a/src/app/join/join.scss
+++ b/src/app/join/join.scss
@@ -30,7 +30,7 @@
             position: relative;
             padding: 0;
 
-            button {
+            .emailCertificationBtn {
                 position: absolute;
                 right: 0;
                 top: 50%;
@@ -42,6 +42,9 @@
                 border-radius: 5px;
                 color: #FFFFFF;
                 cursor: pointer;
+            }
+            .emailCertificationBtn.active{
+                background: #D9D9D9;
             }
         }
     }
